w17 16.04.2019 17:53:21 +0300 - build 300

1. bootstrap & tools

w17 15.04.2019 15:49:43 +0300 - build 299

1. gcc build added

w17 13.04.2019 12:42:01 +0300 - build 298

1. fix 297.

w17 12.04.2019 16:44:52 +0300 - build 297

1. Refactoring

w17 11.04.2019 17:19:48 +0300 - build 296

1. Experimantal: открытие многотомных .zip архивов через archive.zip часто глючило.

w17 21.03.2019 12:43:32 +0300 - build 295

1. 7z.dll обновлена до версии 19.00.

w17 19.02.2019 11:40:42 +0300 - build 294

1. M#3653: Падение ArcLite при попытке открыть .pkg внутри .dmg

w17 15.01.2019 13:24:35 +0300 - build 293

1. 7z.dll обновлена до версии 18.06.

w17 07.08.2018 13:13:37 +0300 - build 292

1. Workaround for far build 5242 Synchronous panel close

w17 03.07.2018 13:33:17 +0300 - build 291

1. Продолжение 290.1

w17 20.06.2018 17:28:29 +0300 - build 290

1. M#3615: Arclite: [ Save settings ] does not save the Compression level
2. Уточнение парсинга дополнительных параметров
3. Умолчательные дополнительные параметры внешних кодеков можно задавать в .xml,
   в arclite.xml добавлены умолчательные параметры для WavPack2.

w17 05.06.2018 09:21:25 +0300 - build 289

1. С форума - зависание arclite при выводе диалога перезаписи файла во время распаковки

w17 11.05.2018 18:08:06 +0300 - build 288

1. 7z.dll обновлена до версии 18.05.

w17 19.04.2018 20:39:37 +0300 - build 287

1. Установка уровня сжатия для сторонних форматов

w17 18.04.2018 18:07:52 +0300 - build 286

1. Поддержка внешних .dll форат + кодек (обязательно в Formats/*.format)

w17 16.04.2018 19:30:56 +0300 - build 285

1. Защита от одновременного вызова экспортируемых ф-й из разных потоков

w17 16.04.2018 16:40:09 +0300 - build 284

1. Откат 283, fixed 7z.dll

w17 13.04.2018 18:08:27 +0300 - build 283

1. M#3598: Отвалился детект некоторых SFX архивов формата ZIP

w17 02.04.2018 12:03:07 +0300 - build 282

1. Extract alternate streams from .wim archives

w17 20.03.2018 20:04:31 +0300 - build 281
