@@ -2,4 +2,4 @@
 MODULE = arclite
 VER_MAJOR = 3
 VER_MINOR = 0
-VER_BUILD = 300
+VER_BUILD = 302
